[tool.poetry]
name = "blog-posts"
version = "0.1.0"
description = ""
authors = ["Pablo Ibieta <ibieta.pablo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.1"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
scipy = "^1.14.1"
torch = "^2.5.1"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
